--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^8.8.1",
+    "lodash.debounce": "^4.0.8",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^3.0.4",
+    "react-hot-toast": "^2.1.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.15",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1"
   }
