--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.4",
-    "react-hot-toast": "^2.1.0"
+    "react-hot-toast": "^2.1.0",
+    "react-markdown": "^6.0.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.15",
