--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "firebase": "^8.8.1",
     "lodash.debounce": "^4.0.8",
+    "lodash.kebabcase": "^4.1.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.4",
+    "react-hook-form": "^6.14.2",
     "react-hot-toast": "^2.1.0",
     "react-markdown": "^6.0.3"
   },
